k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: carnetroute
  labels:
    app: carnetroute
    version: v2
